<resources>
    <string name="app_name">Lady Diary</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="loginMessage">Sign In</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="promptUsername">Username</string>
    <string name="promptPassword">Password</string>
    <string name="appLogoDescription">logo</string>
    <string name="registerMessage">Register</string>
    <string name="forgotPasswordMessage">Forgot password</string>
</resources>